yamlconfig/envoy/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: envoytest
spec: {}
status: {}
