yamlconfig/envoy/secrettls.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: certificates
spec: {}
status: {}
---
# Create Secret for hashikube TLS certs
# k create secret tls hashikube --key ./hashikube.key --cert ./hashikube.crt -n certificates--dry-run=client -o yaml
